--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body{
     background-color:rgb(0, 0, 0); 
     opacity: 0.5; 
     filter:(opacity=50); 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;     
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    z-index: 1;     
 }
 
 .content{
@@ -42,3 +43,8 @@ img {
     border-color:aliceblue;
     margin: 5px;
   }
+@media screen and (max-width: 510px) {
+    .content{
+        width : 300px;
+    }
+}
